--- a/bin/connection-info.properties
+++ b/bin/connection-info.properties
@@ -1,4 +1,4 @@
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:log4jdbc:oracle:thin:@oracle.team-study.com:1521:xe
+url=jdbc:log4jdbc:oracle:thin:@oracle.team-greedy.com:1521:xe
 username=C##SANGBONG
 password=SANGBONG
